--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/loops.jsx"></script>
+    <button id="btn"> Click to proceed</button>
+    <script type="module" src="/src/eventhandlers.jsx"></script>
   </body>
 </html>
