--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <h1 id="heading" >DOM Practice</h1>
+    <p class="section">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur molestias, id, illum illo aperiam velit quod praesentium reiciendis libero, est atque cumque pariatur aut iusto voluptatibus? Architecto maxime eligendi excepturi.</p>
+    <p class="section">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur molestias, id, illum illo aperiam velit quod praesentium reiciendis libero, est atque cumque pariatur aut iusto voluptatibus? Architecto maxime eligendi excepturi.</p>
+    <p class="section">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur molestias, id, illum illo aperiam velit quod praesentium reiciendis libero, est atque cumque pariatur aut iusto voluptatibus? Architecto maxime eligendi excepturi.</p>
+    <div id="imgarea">
+      <img src="/src/assets/438173548_954241530041563_3721136540267727270_n.jpg" alt="image">
+    </div>
+    <ul class="items">
+      <li>list 1</li>
+      <li>list 2</li>
+      <li>list 3</li>
+      <li>list 4</li>
+      <li>list 5</li>
+    </ul>
+    <h2>Gallery</h2>
+    <div class="galeryimgcont">
+      <img class="galleryimg" src="/src/assets/438173548_954241530041563_3721136540267727270_n.jpg" alt="image">
+      <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-11 at 09.20.19.jpeg" alt="image">
+      <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-21 at 08.01.38.jpeg" alt="image">
+      <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-21 at 08.01.07.jpeg" alt="image">
+    </div>
     <button id="btn"> Click to proceed</button>
-    <script type="module" src="/src/eventhandlers.jsx"></script>
+    <script type="module" src="/src/DOM.jsx"></script>
   </body>
 </html>
