--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-21 at 08.01.07.jpeg" alt="image">
     </div>
     <button id="btn"> Click to proceed</button>
-    <script type="module" src="/src/DOM.jsx"></script>
+    <script type="module" src="/src/AsyncAwait.jsx"></script>
   </body>
 </html>
