--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-21 at 08.01.38.jpeg" alt="image">
       <img class="galleryimg" src="/src/assets/WhatsApp Image 2024-05-21 at 08.01.07.jpeg" alt="image">
     </div>
+
+    <h2>Promises</h2>
+    <h3 id="result">Results</h3>
+    <h4 id="finally">Finally</h4>
     <button id="btn"> Click to proceed</button>
-    <script type="module" src="/src/AsyncAwait.jsx"></script>
+    <script type="module" src="/src/promises.jsx "></script>
   </body>
 </html>
